intern/ghost/intern/GHOST_WindowWin32.cpp
@@ -121,18 +121,20 @@ GHOST_WindowWin32::GHOST_WindowWin32(GHOST_SystemWin32 *system,
   monitor.dwFlags = 0;
   GetMonitorInfo(MonitorFromRect(&win_rect, MONITOR_DEFAULTTONEAREST), &monitor);
 
-  /* Constrain size to fit within this monitor. */
+  /* Constrain requested size and position to fit within this monitor. */
   width = min(monitor.rcWork.right - monitor.rcWork.left, win_rect.right - win_rect.left);
   height = min(monitor.rcWork.bottom - monitor.rcWork.top, win_rect.bottom - win_rect.top);
-
   win_rect.left = min(max(monitor.rcWork.left, win_rect.left), monitor.rcWork.right - width);
   win_rect.right = win_rect.left + width;
   win_rect.top = min(max(monitor.rcWork.top, win_rect.top), monitor.rcWork.bottom - height);
   win_rect.bottom = win_rect.top + height;
 
-  /* Adjust our requested values to allow for caption, borders, shadows, etc.
-     Windows API Note: You cannot specify WS_OVERLAPPED when calling. */
+  /* Adjust to allow for caption, borders, shadows, scaling, etc. Resulting values can be
+   * correctly outside of monitor bounds. Note: You cannot specify WS_OVERLAPPED when calling. */
   AdjustWindowRectEx(&win_rect, style & ~WS_OVERLAPPED, FALSE, extended_style);
+
+  /* But never allow a top position that can hide part of the title bar. */
+  win_rect.top = max(monitor.rcWork.top, win_rect.top);
 
   m_hWnd = ::CreateWindowExW(extended_style,                  // window extended style
                              s_windowClassName,               // pointer to registered class name
